KNOX-118: Add rewrite functions to allow use of service registry within rewrite rules.  Also includes initial integration of this with Oozie.